# Gr00t_Mamba

./: README.md  pyproject.toml
checkpoint_ACT/checkpoint_10000/: model.safetensors
checkpoint_ACT/checkpoint_15000/: model.safetensors
checkpoint_ACT/checkpoint_20000/: config.json  model.safetensors
checkpoint_ACT/checkpoint_5000/: model.safetensors
gr00t/model/backbone/: mamba_backbone.py
lerobot/: REPLAY_USAGE.md  demo_episode_replay.py  find_robot_ports.py  load_gr00t_model.py  replay_all_episodes.py  replay_moving_tape_dataset.py  replay_with_real_robot.py  test_episode_replay.py  test_robot_connection.py  typescript
lerobot/scripts/: calibrate.sh  eval.sh  record.sh
lerobot/src/lerobot/: calibrate.py  eval.py  record.py  upload.py
lerobot/src/lerobot/datasets/: debug_check.py  direct_merge_dataset.py  lerobot_dataset.py  merge_dataset.py  simple_merge_dataset.py
lerobot/src/lerobot/datasets/multi_dataset_cache/: README.md
lerobot/src/lerobot/datasets/multi_dataset_cache/JisooSong/moving-tape-dataset-20250915_153200/meta/: info.json
lerobot/src/lerobot/datasets/multi_dataset_cache/JisooSong/moving-tape-dataset-20250915_153200/moving-tape-dataset-20250915_153200/meta/: episodes.jsonl
lerobot/src/lerobot/datasets/multi_dataset_cache/JisooSong/moving-tape-dataset-20250915_153200/moving-tape-dataset-20250917_203239/meta/: info.json
lerobot/src/lerobot/datasets/multi_dataset_cache/JisooSong/moving-tape-dataset-20250915_154309/meta/: episodes_stats.jsonl
lerobot/src/lerobot/datasets/multi_dataset_cache/JisooSong/moving-tape-dataset-20250915_154309/moving-tape-dataset-20250915_154309/meta/: episodes_stats.jsonl  info.json
lerobot/src/lerobot/datasets/multi_dataset_cache/JisooSong/moving-tape-dataset-20250915_154309/moving-tape-dataset-20250918_101305-added-stats/meta/: tasks.jsonl
lerobot/src/lerobot/datasets/multi_dataset_cache/JisooSong/moving-tape-dataset-20250915_154309/moving-tape-dataset-20250918_104008/meta/: stats.json
lerobot/src/lerobot/datasets/multi_dataset_cache/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  stats.json
lerobot/src/lerobot/datasets/multi_dataset_cache/moving-tape-dataset-20250915_154309/meta/: episodes.jsonl
lerobot/src/lerobot/datasets/multi_dataset_cache/moving-tape-dataset-20250918_101305-added-stats/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  stats.json
lerobot/src/lerobot/datasets/multi_dataset_cache/moving-tape-merged-dataset/meta/: info.json
lerobot/src/lerobot/robots/: robot.py  robot1.py  utils.py
lerobot/src/lerobot/robots/bi_so101_follower/: bi_so101_follower.py
lerobot/src/lerobot/scripts/: teleop_dualarm_wy.sh
lerobot/src/lerobot/teleoperators/: utils.py
lerobot/src/lerobot/teleoperators/bi_so101_leader/: bi_so101_leader.py
scripts/: gr00t_finetune.py
