[build-system]
requires = ["setuptools>=64.0.0", "wheel", "pip>=21.3", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "gr00t-mamba-environment"
version = "1.0.0"
description = "GR00T Mamba 환경 설정 - 실제 설치된 패키지 기반"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "cwson", email = "cwson@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

# 실제 gr00t 환경에 설치된 모든 패키지들 (터미널 pip list 기반)
dependencies = [
    # PyTorch 생태계
    "torch==2.5.1",
    "torchvision==0.20.1", 
    "torchaudio==2.5.1",
    
    # HuggingFace 생태계
    "transformers==4.51.3",
    "tokenizers==0.21.4",
    "accelerate==1.2.1",
    "peft==0.17.0",
    "huggingface-hub==0.35.3",
    "hf-xet==1.1.10",
    
    # 데이터 처리
    "numpy==1.26.4",
    "pandas==2.3.3",
    "pyarrow==21.0.0",
    "fastparquet==2024.11.0",
    
    # 컴퓨터 비전
    "opencv-python-headless==4.11.0.86",
    "pillow==11.3.0",
    "imageio==2.34.2",
    "scikit-image==0.25.2",
    "kornia==0.7.4",
    "kornia_rs==0.1.9",
    
    # 딥러닝 프레임워크
    "diffusers==0.35.1",
    "safetensors==0.6.2",
    
    # 비디오 처리
    "decord==0.6.0",
    "av==12.3.0",
    
    # 3D 처리
    "pytorch3d==0.7.8",
    
    # 수학/과학 라이브러리
    "scipy==1.15.3",
    "sympy==1.13.1",
    "networkx==3.4.2",
    "numba==0.62.1",
    "mpmath==1.3.0",
    
    # 유틸리티
    "tqdm==4.67.1",
    "matplotlib==3.10.0",
    "rich==14.1.0",
    "click==8.3.0",
    "packaging==25.0",
    "setuptools==78.1.1",
    "wheel==0.45.1",
    "pip==25.2",
    
    # 설정 관리
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "PyYAML==6.0.2",
    "yacs==0.1.8",
    
    # 실험 추적
    "wandb==0.18.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    
    # 기타 유틸리티
    "einops==0.8.1",
    "timm==1.0.14",
    "tyro==0.9.17",
    "requests==2.32.3",
    "blessings==1.7",
    "dm-tree==0.1.8",
    "h5py==3.12.1",
    "gymnasium==1.0.0",
    "tianshou==0.5.1",
    "ray==2.40.0",
    "albumentations==1.4.18",
    "numpydantic==1.6.7",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "typing_extensions==4.12.2",
    "protobuf==3.20.3",
    "onnx==1.17.0",
    "pytest==8.4.2",
    
    # CUDA 최적화
    "flash-attn==2.8.3",
    "triton==3.1.0",
    
    # 시스템 유틸리티
    "psutil==7.1.0",
    "portalocker==3.2.0",
    "shtab==1.7.2",
    "typeguard==4.4.2",
    "tifffile==2025.5.10",
    "termcolor==3.1.0",
    "tabulate==0.9.0",
    "setproctitle==1.3.7",
    "sentry-sdk==2.39.0",
    
    # 파일/네트워크 처리
    "fsspec==2024.6.1",
    "filelock==3.17.0",
    "iopath==0.1.10",
    "fvcore==0.1.5.post20221221",
    "lazy_loader==0.4",
    "GitPython==3.1.45",
    "gitdb==4.0.12",
    "grpcio==1.75.1",
    "docker-pycreds==0.4.0",
    
    # 데이터 압축/인코딩
    "cramjam==2.11.0",
    "brotlicffi==1.0.9.2",
    "msgpack==1.1.1",
    "cloudpickle==3.1.1",
    
    # 웹/HTTP
    "Werkzeug==3.1.3",
    "certifi==2025.8.3",
    "urllib3==2.5.0",
    "charset-normalizer==3.3.2",
    "idna==3.7",
    "PySocks==1.7.1",
    
    # 텍스트 처리
    "regex==2025.9.18",
    "Markdown==3.9",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "Pygments==2.19.2",
    
    # JSON/스키마
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "referencing==0.36.2",
    "rpds-py==0.27.1",
    
    # 템플릿/렌더링
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    
    # 날짜/시간
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "tzdata==2025.2",
    
    # 기타 의존성
    "attrs==25.3.0",
    "cffi==1.17.1",
    "pycparser==2.23",
    "six==1.17.0",
    "zipp==3.23.0",
    "importlib_metadata==8.7.0",
    "tomli==2.2.1",
    "pluggy==1.6.0",
    "iniconfig==2.1.0",
    "exceptiongroup==1.3.0",
    "eval_type_backport==0.2.2",
    "docstring_parser==0.17.0",
    "antlr4-python3-runtime==4.9.3",
    "albucore==0.0.17",
    "absl-py==2.3.1",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "blessings==1.7",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "frozenlist==1.7.0",
    "gmpy2==2.2.1",
    "kiwisolver==1.4.9",
    "llvmlite==0.45.1",
    "mkl-fft==1.3.11",
    "mkl-random==1.2.8",
    "mkl-service==2.4.0",
    "platformdirs==4.4.0",
    "pyparsing==3.2.5",
    "smmap==5.0.2",
    "pettingzoo==1.25.0",
    "Farama-Notifications==0.0.4",
]

[project.optional-dependencies]
# 개발 도구 (현재 환경에 없음)
dev = [
    "black",
    "isort", 
    "mypy",
    "flake8",
    "pylint",
    "autopep8",
    "yapf",
    "ruff",
    "jupyter",
    "ipykernel",
    "ipython",
    "ipywidgets",
    "jupyterlab",
    "notebook",
]

# 데이터 과학 추가 도구
data-science = [
    "scikit-learn",
    "statsmodels",
    "seaborn",
    "plotly",
    "bokeh",
    "holoviews",
    "panel",
    "altair",
]

# 웹 개발
web = [
    "streamlit",
    "flask",
    "fastapi",
    "uvicorn",
]

# Jetson/ARM 지원
jetson = [
    "pycuda",
    "nvtx",
]

# 배포용
deploy = [
    "tensorrt-cu12",
    "onnxruntime-gpu",
]

# Mamba 특화
mamba = [
    "mamba-ssm",
    "causal-conv1d",
]

# 전체 설치 (모든 옵션 포함)
all = [
    "gr00t-mamba-environment[dev,data-science,web,jetson,deploy,mamba]"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gr00t*"]
exclude = [
    "*.tests",
    "*.tests.*", 
    "tests.*",
    "tests",
    "docs*",
    "scripts*",
    "*checkpoints*",
    "*.egg-info*",
]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# 실제 환경 정보 (터미널 pip list 기반)
# CUDA Version: 12.4
# GPU: NVIDIA RTX A6000 (2개)
# Python: 3.10
# 총 설치된 패키지: 172개
# 주요 패키지 버전 (실제 설치된 버전):
# - torch: 2.5.1
# - torchvision: 0.20.1
# - torchaudio: 2.5.1
# - transformers: 4.51.3
# - accelerate: 1.2.1
# - numpy: 1.26.4
# - pandas: 2.3.3
# - pyarrow: 21.0.0
# - diffusers: 0.35.1
# - flash_attn: 2.8.3
# - triton: 3.1.0
# - pytorch3d: 0.7.8
# - scipy: 1.15.3
# - scikit-image: 0.25.2
# - pillow: 11.3.0
# - opencv-python-headless: 4.11.0.86
# - wandb: 0.18.0
# - tensorboard: 2.20.0